[gd_scene load_steps=9 format=2]

[ext_resource path="res://default_theme.tres" type="Theme" id=1]
[ext_resource path="res://graph/nodes/filters/blend/Filter.gd" type="Script" id=2]
[ext_resource path="res://graph/nodes/filters/blend/Filter.shader" type="Shader" id=3]
[ext_resource path="res://textures/gradient2.png" type="Texture" id=4]
[ext_resource path="res://textures/gradient.png" type="Texture" id=5]
[ext_resource path="res://utils/foldout/Foldout.tscn" type="PackedScene" id=6]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/iMethod = 8
shader_param/iAmount = 0.48
shader_param/iTextureA = ExtResource( 4 )
shader_param/iTextureB = ExtResource( 5 )

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("Viewport")

[node name="Blend Filter" type="GraphNode" groups=[
"filter_nodes",
"nodes",
]]
margin_right = 244.0
margin_bottom = 363.0
size_flags_horizontal = 9
size_flags_vertical = 9
theme = ExtResource( 1 )
title = "Blend Filter"
show_close = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
slot/3/left_enabled = true
slot/3/left_type = 0
slot/3/left_color = Color( 1, 1, 1, 1 )
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color( 1, 1, 1, 1 )
slot/4/left_enabled = true
slot/4/left_type = 0
slot/4/left_color = Color( 1, 1, 1, 1 )
slot/4/right_enabled = true
slot/4/right_type = 0
slot/4/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 2 )

[node name="MarginDoNotTouch" type="MarginContainer" parent="."]
margin_left = 22.0
margin_top = 30.0
margin_right = 222.0
margin_bottom = 31.0
custom_constants/margin_top = 1

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 2048, 2048 )
hdr = false
disable_3d = true
keep_3d_linear = true
usage = 0
render_target_v_flip = true
gui_disable_input = true

[node name="Texture" type="ColorRect" parent="Viewport"]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="PreviewFoldout" parent="." instance=ExtResource( 6 )]
margin_left = 22.0
margin_top = 31.0
margin_right = 222.0
margin_bottom = 265.0
title = "Preview"
is_folded = false

[node name="Preview" type="TextureRect" parent="PreviewFoldout"]
margin_top = 34.0
margin_right = 200.0
margin_bottom = 234.0
rect_min_size = Vector2( 200, 200 )
texture = SubResource( 2 )
expand = true
stretch_mode = 6

[node name="Grid" type="GridContainer" parent="."]
margin_left = 22.0
margin_top = 285.0
margin_right = 222.0
margin_bottom = 341.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 2

[node name="ControlLabel" type="Label" parent="Grid"]
margin_top = 4.0
margin_right = 51.0
margin_bottom = 18.0
text = "Method"

[node name="InputControl" type="OptionButton" parent="Grid"]
margin_left = 61.0
margin_right = 200.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Mix"
items = [ "Mix", null, false, 0, null, "Add", null, false, 1, null, "Substract", null, false, 2, null, "Multiply", null, false, 3, null, "Divide", null, false, 4, null, "Max Pass", null, false, 5, null, "Min Pass", null, false, 6, null, "Screen", null, false, 7, null, "Overlay", null, false, 8, null ]
selected = 0

[node name="ControlLabel_2" type="Label" parent="Grid"]
margin_top = 37.0
margin_right = 51.0
margin_bottom = 51.0
text = "Amount"

[node name="InputControl_2" type="SpinBox" parent="Grid"]
margin_left = 61.0
margin_top = 32.0
margin_right = 200.0
margin_bottom = 56.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 22.0
margin_top = 361.0
margin_right = 222.0
margin_bottom = 375.0

[node name="Label" type="Label" parent="HBoxContainer"]
margin_right = 95.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Texture A"

[node name="Label2" type="Label" parent="HBoxContainer"]
margin_left = 105.0
margin_right = 200.0
margin_bottom = 14.0
size_flags_horizontal = 3
align = 2

[node name="HBoxContainer_2" type="HBoxContainer" parent="."]
margin_left = 22.0
margin_top = 395.0
margin_right = 222.0
margin_bottom = 409.0

[node name="Label" type="Label" parent="HBoxContainer_2"]
margin_right = 95.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Texture B"

[node name="Label2" type="Label" parent="HBoxContainer_2"]
margin_left = 105.0
margin_right = 200.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Output"
align = 2
